--- a/index.html
+++ b/index.html
@@ -83,40 +83,39 @@
     <section class="tree-shop max-w-[1600px] mx-auto p-6 bg-green-50">
         <h2 class="mb-6 text-2xl font-bold text-center">Choose Your Trees</h2>
 
-        <div class="grid grid-cols-12 gap-6 shop-container">
+        <div class="grid grid-cols-1 gap-6 lg:grid-cols-12 shop-container">
 
             <!-- Sidebar: Categories -->
-            <aside class="col-span-2 p-4 rounded-lg categories ">
-                <h3 class="mb-3 font-semibold text-center">Categories</h3>
-                <div id="categories">
-                </div>
+            <aside class="order-2 p-4 bg-white rounded-lg shadow-sm categories lg:order-1 lg:col-span-2">
+                <h3 class="mb-3 font-semibold text-center lg:text-left">Categories</h3>
+                <div id="categories"></div>
             </aside>
 
             <!-- Product Grid -->
-            <div class="col-span-7 products">
+            <div class="order-1 products lg:order-2 lg:col-span-7">
                 <!-- Spinner -->
                 <div id="spinner" class="hidden py-10 text-center">
                     <div class="w-12 h-12 mx-auto border-b-2 border-green-700 rounded-full animate-spin"></div>
                     <p class="mt-2 text-gray-500">Loading plants...</p>
                 </div>
 
-                <div id="plants-container" class="grid grid-cols-3 gap-6">
-
+                <div id="plants-container" class="grid grid-cols-2 gap-6 sm:grid-cols-3 md:grid-cols-4">
                 </div>
             </div>
 
             <!-- Cart Sidebar -->
-            <aside class="col-span-3 p-4 bg-white rounded-lg shadow cart">
+            <aside class="order-3 p-4 bg-white rounded-lg shadow cart lg:col-span-3">
                 <h3 class="mb-3 font-semibold">Your Cart</h3>
-                <ul id="cart-items" class="space-y-2">
-                </ul>
-                <div class="flex items-center justify-between mt-4 font-bold b">
+                <ul id="cart-items" class="space-y-2"></ul>
+                <div class="flex items-center justify-between mt-4 font-bold">
                     <span>Total:</span>
                     <span id="cart-total">৳0</span>
                 </div>
             </aside>
+
         </div>
     </section>
+
 
     <dialog id="plant_modal" class="modal modal-bottom sm:modal-middle">
         <div class="modal-box">
@@ -130,8 +129,6 @@
             </div>
         </div>
     </dialog>
-
-
 
     <section class="px-4 py-12 bg-green-50 sm:px-8 md:px-12 lg:px-16">
         <h1 class="justify-center mb-6 text-3xl font-bold text-center sm:text-4xl lg:text-5xl">
@@ -157,8 +154,38 @@
             </div>
         </div>
     </section>
+    <section class="px-4 py-16 bg-[#CFF0DC] sm:px-8 md:px-12 lg:px-16">
+        <div class="max-w-6xl mx-auto text-center">
+            <h2 class="mb-12 text-2xl font-bold text-gray-800 sm:text-3xl">
+                Our Impact
+            </h2>
+            <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
 
-    
+                <!-- Stat Card 1 -->
+                <div
+                    class="p-6 transition transform bg-white rounded-lg shadow-md hover:scale-105 hover:shadow-xl hover:bg-green-100">
+                    <h3 class="text-2xl font-bold text-green-700 sm:text-3xl">500K+</h3>
+                    <p class="mt-2 text-gray-600">Trees Planted</p>
+                </div>
+
+                <!-- Stat Card 2 -->
+                <div
+                    class="p-6 transition transform bg-white rounded-lg shadow-md hover:scale-105 hover:shadow-xl hover:bg-green-100">
+                    <h3 class="text-2xl font-bold text-green-700 sm:text-3xl">120+</h3>
+                    <p class="mt-2 text-gray-600">Communities Involved</p>
+                </div>
+
+                <!-- Stat Card 3 -->
+                <div
+                    class="p-6 transition transform bg-white rounded-lg shadow-md hover:scale-105 hover:shadow-xl hover:bg-green-100">
+                    <h3 class="text-2xl font-bold text-green-700 sm:text-3xl">30+</h3>
+                    <p class="mt-2 text-gray-600">Countries Reached</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="index.js"></script>
 </body>
 
