--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <div class="grid grid-cols-1 gap-6 lg:grid-cols-12 shop-container">
 
             <!-- Sidebar: Categories -->
-            <aside class="order-2 p-4 bg-white rounded-lg shadow-sm categories lg:order-1 lg:col-span-2">
-                <h3 class="mb-3 font-semibold text-center lg:text-left">Categories</h3>
+            <aside class="order-2 p-4 rounded-lg categories lg:order-1 lg:col-span-2">
+                <h3 class="mb-3 font-bold text-center lg:text-left">Categories</h3>
                 <div id="categories"></div>
             </aside>
 
@@ -95,14 +95,13 @@
             <div class="order-1 products lg:order-2 lg:col-span-7">
                 <!-- Spinner -->
                 <div id="spinner" class="hidden py-10 text-center">
-                    <div class="w-12 h-12 mx-auto border-b-2 border-green-700 rounded-full animate-spin"></div>
+                    <div class="mx-auto border-b-4 border-green-700 rounded-full h-15 w-15 animate-spin"></div>
                     <p class="mt-2 text-gray-500">Loading plants...</p>
                 </div>
 
                 <div id="plants-container" class="grid grid-cols-2 gap-6 sm:grid-cols-3 md:grid-cols-4">
                 </div>
             </div>
-
             <!-- Cart Sidebar -->
             <aside class="order-3 p-4 bg-white rounded-lg shadow cart lg:col-span-3">
                 <h3 class="mb-3 font-semibold">Your Cart</h3>
@@ -184,7 +183,41 @@
             </div>
         </div>
     </section>
+    <section class="flex flex-col items-center justify-center min-h-[60vh] bg-[#166534]">
+        <h1 class="mb-6 text-2xl font-semibold text-center text-white">
+            Plant a Tree Today
+        </h1>
 
+        <!-- Form Card -->
+        <div class="w-full max-w-md p-8 bg-[#15803D] rounded-lg shadow-md py-5">
+            <form class="space-y-4">
+                <input type="text" placeholder="Your Name" required
+                    class="w-full p-3 bg-white border-none rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400" />
+
+                <input type="email" placeholder="Your Email Address" required
+                    class="w-full p-3 bg-white border-none rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400" />
+
+                <select required
+                    class="w-full p-3 bg-white border-none rounded-md focus:outline-none focus:ring-2 focus:ring-yellow-400">
+                    <option disabled selected>Number of Trees</option>
+                    <option>1 Tree - $5 </option>
+                    <option>5 Trees - 25$</option>
+                    <option>10 Trees - 50$</option>
+                </select>
+
+                <button type="submit"
+                    class="w-full py-3 font-semibold text-black bg-yellow-400 rounded-full hover:bg-yellow-500">
+                    Donate Now
+                </button>
+            </form>
+        </div>
+    </section>
+
+    <footer class="bg-[#14532D] text-white py-6">
+        <div class="max-w-6xl mx-auto text-sm text-center">
+            © 2025 <span class="font-semibold">Green Earth</span>. All Rights Reserved.
+        </div>
+    </footer>
 
     <script src="index.js"></script>
 </body>
