--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </ul>
             </div>
 
-            <!-- Navbar End (button) -->
+            <!-- Navbar End button -->
             <div class="navbar-end">
                 <a class="transition bg-yellow-400 rounded-full btn hover:bg-yellow-500">
                     Plant a Tree
@@ -86,20 +86,20 @@
         <div class="grid grid-cols-1 gap-6 lg:grid-cols-12 shop-container">
 
             <!-- Sidebar: Categories -->
-            <aside class="order-2 p-4 rounded-lg categories lg:order-1 lg:col-span-2">
+            <aside class="order-1 p-4 rounded-lg categories lg:order-1 lg:col-span-2">
                 <h3 class="mb-3 font-bold text-center lg:text-left">Categories</h3>
                 <div id="categories"></div>
             </aside>
 
             <!-- Product Grid -->
-            <div class="order-1 products lg:order-2 lg:col-span-7">
+            <div class="order-2 products lg:order-2 lg:col-span-7">
                 <!-- Spinner -->
                 <div id="spinner" class="hidden py-10 text-center">
                     <div class="mx-auto border-b-4 border-green-700 rounded-full h-15 w-15 animate-spin"></div>
                     <p class="mt-2 text-gray-500">Loading plants...</p>
                 </div>
 
-                <div id="plants-container" class="grid grid-cols-2 gap-6 sm:grid-cols-3 md:grid-cols-4">
+                <div id="plants-container" class="grid grid-cols-2 gap-6 sm:grid-cols-3 md:grid-cols-3">
                 </div>
             </div>
             <!-- Cart Sidebar -->
